# open-maintainer-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: ci_runs.example.csv  issues.example.csv  pull_requests.example.csv  releases.example.csv  security.example.csv
docs/: DOGFOODING.md  EXAMPLE_WORKFLOW.md  SCHEMAS.md
examples/open-growth-loop-current/: README.md
examples/open-growth-loop-current/data/: ci_runs.csv  issues.csv  pull_requests.csv  releases.csv  security.csv
src/open_maintainer_kit/: cli.py  engine.py  github_import.py  io_utils.py  privacy.py  prompts.py  workspace.py
tests/: test_engine.py  test_github_import.py  test_privacy.py  test_prompts.py  test_workspace.py
