[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-maintainer-kit"
version = "0.1.0"
description = "A local-first maintainer triage loop for open-source repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Open Maintainer Kit contributors" }
]
keywords = ["open-source", "maintainer-tools", "triage", "release", "codex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/R3ijar/open-maintainer-kit"
Repository = "https://github.com/R3ijar/open-maintainer-kit"
Issues = "https://github.com/R3ijar/open-maintainer-kit/issues"

[project.scripts]
omk = "open_maintainer_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
